# lab1-graphics

./: CMakeCache.txt  CMakeLists.txt  Makefile  OpenGLTemplate  cmake_install.cmake  main.cc  scene1_1.tga  scene1_2.tga  scene1_3.tga  scene1_4.tga  scene2_1.tga  scene2_2.tga  scene2_3.tga  scene2_4.tga
report/: lab.docx  lab1.4ct  lab1.4tc  lab1.aux  lab1.css  lab1.dvi  lab1.html  lab1.idv  lab1.lg  lab1.tex  lab1.xref  main.cc  text.txt
